--- a/index.html
+++ b/index.html
@@ -85,15 +85,17 @@
     <hr>
     <div class="Aboutcontainer">
            <div class="aboutDetail aboutbox" >
-                   <p>Greetings! I'm Sagar Dnyaneshwar Mahajan, an enthusiastic and skilled
+                   <p>Namaste! I'm Sagar Dnyaneshwar Mahajan, an enthusiastic and skilled
                      full-stack developer specializing in React development. Holding a Master's 
                      degree in Computer Science (MSc CS), I'm on a mission to create exceptional 
                      web solutions that make a positive impact.  
                      Thank you for visiting my portfolio website. <span class="abutispn"> I hope you find inspiration in 
                      my work and accomplishments </span>
                      .</p>
+                     <div class="hideBtn">
                      <button class="btn">Download-CV</button> &nbsp;&nbsp;
                      <button class="btn">Learn More</button>
+                    </div>
 
            </div>
            <div class="aboutImg aboutbox">
