--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
            </div>
            <div class="aboutImg aboutbox">
-              <img src="images/WhatsApp Image 2023-06-28 at 10.23.17 PM (1).jpeg" alt="sagarimg" class="aboutImg">
+              <img src="images/WhatsApp Image 2023-06-28 at 10.23.17 PM (1).jpeg" alt="SagarMahajan" class="aboutImg">
               <div class="social2">
                 <div class="aboutSocial">
                 <a href="https://github.com/Sagarmahajan01"><img src="images/icons8-github-48.png" alt="i" ></a>  
