--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="Nh30zdnbZdfG0bZjU-MmhE62RWwCml2rQUNP3CXJLWI" />
-    
-    <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="shortcut icon" href="images/favicon.ico" type="ico">
-
-    
-    <title>portfolio</title>
-</head>
+      <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <meta name="google-site-verification" content="Nh30zdnbZdfG0bZjU-MmhE62RWwCml2rQUNP3CXJLWI" />
+          <title>Sagar Mahajan - Portfolio</title>
+          <meta name="description" content="Sagar Mahajan, a highly motivated web developer with expertise in React.js, JavaScript, and Node.js. An SEO expert passionate about creating efficient and user-friendly web solutions. Explore Sagar's portfolio showcasing skills and projects.">
+          <link rel="stylesheet" href="style.css">
+          <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+          <link rel="shortcut icon" href="images/favicon.ico" type="ico"> 
+      </head>
 <body>
 
 
